--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -38,13 +38,13 @@
       <p>You may opt out of our messaging campaigns at any time. To stop receiving messages, you can:</p>
       <ul class="wp-block-list">
         <li><strong>Reply “STOP”</strong> to any message you receive from us</li>
-        <li>Or contact us directly at support@inspectorwiz.com</li>
+        <li>Or contact us directly at info@garagegators.com</li>
       </ul>
       <p>Once we receive your request, we will promptly remove you from our messaging list.</p>
 
       <h3 class="wp-block-heading">5. Contact Us</h3>
       <p>If you have any questions about this Privacy Policy or how your information is handled, please contact us:</p>
-      <p>Garage Gators<br/>support@inspectorwiz.com</p>
+      <p>Garage Gators<br/>info@garagegators.com</p>
     </div><!-- /.content -->
   </div><!-- /.col -->
   <div id="sidebar" class="col-md-4 order-md-first col-sm-12 order-sm-last"></div>
